
Copyright (c) 1998-2010 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.38.3 - February ??, 2010

    Added index/1 directives for the predicate lookup caching predicates to
    the SWI-Prolog integration files (see "integration/logtalk_comp_swi.pl").
    These directives may or may not improve performance, depending on your
    application.

    Simplified usage of the "mtbatch" multi-threading benchmarks example
    by using conditional compilation directives for the Prolog-specific
    predicates instead of a parametric object.

    Update the Windows installer script in order to check for the new
    name of the SWI-Prolog executable (swipl-win.exe) when creating the
    integrations shortcuts.


2.38.2 - January 31, 2010

    Added support for calling :/1 goals using the <</2 control construct.

    Added support for calling non-redefined built-in predicates using the
    :/1 control construct.

    Corrected a Logtalk compiler bug (introduced in version 2.38.1) where
    redefinitions of Prolog built-in predicates would be ignored. Thanks
    to Parker Jones for the bug report.

    Simplified declaration and handling of proprietary directives with
    meta-arguments by defining a '$lgt_pl_meta_directive'/1 predicate in
    all config files.

    Added '$lgt_tr_predicate_indicators'/2, '$lgt_tr_predicate_heads'/2, and
    '$lgt_tr_predicate_heads'/3 hook predicates to the Logtalk compiler in
    order to simplify handling of proprietary directives in config files.

    Added support for the proprietary directive eager_consume/0 to the config
    file of B-Prolog and corrected bugs that prevented using the proprietary